CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 11)

ADD_EXECUTABLE(main
  main.cpp
src/bdz.c
src/bdz.h
src/bmz.c
src/bmz.h
src/brz.c
src/brz.h
src/chd.c
src/chd.h
src/chm.c
src/chm.h
src/fch.c
src/fch.h
src/bmz8.c
src/bmz8.h
src/cmph.c
src/cmph.h
src/hash.c
src/hash.h
src/main.c
src/debug.h
src/graph.c
src/graph.h
src/bdz_ph.c
src/bdz_ph.h
src/chd_ph.c
src/chd_ph.h
src/select.c
src/select.h
src/vqueue.c
src/vqueue.h
src/vstack.c
src/vstack.h
src/bitbool.h
src/cmph_time.h
src/wingetopt.c
src/wingetopt.h
src/bm_numbers.c
src/cmph_types.h
src/hash_state.h
src/bdz_structs.h
src/bmz_structs.h
src/brz_structs.h
src/chd_structs.h
src/chm_structs.h
src/fch_buckets.c
src/fch_buckets.h
src/fch_structs.h
src/bmz8_structs.h
)
